fix: Correct URL

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <ul> 
                         <li>This CV as Marcdown file: <a href="https://lem0nade7.github.io/rsschool-cv/cv" title="Marcdown CV">lem0nade7.github. </a>
                             </li>
-                        <li>This CV as HTML/CSS files <a href="https://lem0nade7.github.io/rsschool-cv/cv" title="Marcdown CV">lem0nade7.github. </a> </li>
+                        <li>This CV as HTML/CSS files <a href="https://lem0nade7.github.io/rsschool-cv/" title="HTML/CSS CV">lem0nade7.github. </a> </li>
                     </ul>
                     <h3>Code example:</h3>
                     <div class="code-example">
